# failure-frontier-teaching

./: .gitignore  Dockerfile  README.md  pyproject.toml
experiments/: PILOT_README.md  __init__.py  critical_ff_protocol.md  fixed_material_protocol.md  minimal_failure_lineage_v1.md  provenance_stratified_ff_v2.md  run_fixed_material.py  run_fresh_iterative.py  run_iterative.py  run_pilot.py
tests/: test_baseline_manifest.py  test_baseline_v2.py  test_baseline_v3.py  test_baseline_v3_expanded.py  test_docker_e2e.py  test_exact_monotone_paths.py  test_expanded_benchmark_catalog.py  test_expanded_benchmarks.py  test_expanded_docker_e2e.py  test_expanded_dp_oracles.py  test_expanded_graph_oracles.py  test_expanded_misc_oracles.py  test_harness.py  test_lc69_quality_gate.py  test_maximum_subarray_sum_after_k_swaps.py  test_minimum_operations_binary_transform.py  test_models.py  test_oracle_hardened_v3.py  test_palindrome_problem.py  test_problem_bank_v4_calibration.py  test_problem_bank_v4_phase_a.py  test_runner.py  test_sorted_gcd_pair_queries.py
tools/: analyze_pilot_eligibility.py  apply_reference_thresholds_v1.py  audit_lc69_quality.py  audit_lc_problem_bank_v4.py  audit_problem_bank_v4_calibration.py  audit_problem_statements.py  audit_run_submission_algorithms.py  audit_student_ac_small_oracles.py  audit_student_nonobvious_oracles.py  augment_v4_100_independent_oracle_tests.py  baseline_v2.py  baseline_v3.py  baseline_v3_expanded.py  baseline_v4_100.py  baseline_v4_100_independent_audit_v2.py  benchmark_expanded_references.py  expanded_benchmark_catalog.py  (+29 more)
(+1363 files in other folders)
